--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <title>hashiwokakero</title>
+        <link rel="stylesheet" type="text/css" href="css/main.css">
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="js/all.min.js"></script>
     </head>
