--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
         <link rel="stylesheet" type="text/css" href="css/main.css">
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
         <script src="js/all.min.js"></script>
+		<script src="js/papaparse.js"></script>
     </head>
 
-    <body onload="game.init()">    
+    <body onload="game.init_by_json()">    
     
         <div>
             <button onclick="game.finished()">Check Game</button>
