--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <div>
             <button onclick="game.finished()">Check Game</button>
             <button onclick="game.reset()">Reset</button>
+            <input type="file" id="files" onchange="test(this)" />
+            <output id="list"></output>
         </div>
         
         <div class="game">
