--- a/index.html
+++ b/index.html
@@ -24,8 +24,17 @@
             <!-- Modal content -->
             <div class="modal-content">
                 <span class="close">&times;</span>
-                <h3>Enter your Hashiwokakero structure:</h3>
-                <textarea class="load-game" placeholder="test ...."></textarea>
+                
+                <div class="row">
+                    <div class="col">
+                        <label>Enter your Hashiwokakero structure:</label>
+                        <textarea class="load-game"></textarea>
+                    </div>
+                    <div class="col">
+                        <label>Example structure:</label>
+                        <textarea class="example" readonly></textarea>
+                    </div>
+                </div>
                 <button onclick="game.load_from_csv()">Load</button>
             </div>
 
