--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="row">
                     <div class="col">
                         <label>Copy the following text:</label>
-                        <textarea class="export-game" readonly></textarea>
+                        <textarea class="export_game" readonly></textarea>
                     </div>
                 </div>
             </div>
