added highlight functionality.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             <button onclick="game.reset()">Reset</button>
             <button onclick="game.display_load()">Load</button>
             <button onclick="game.display_export()">Export</button>
+            <button onclick="game.highlight()">Highlight</button>
+            <button onclick="game.unhighlight()">Unhighlight</button>
         </div>
         
         <div id="modal_load" class="modal">
