--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
     
         <footer>
-            <p>Copyright Kevin Wallis</p>
+            <p>&copy; Copyright 2017 Kevin Wallis</p>
         </footer>
     </body>
 </html>
